--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-            <img src="hii.png" alt="Aditya Raj" width="90">
+            <img src="Profile photo.png" alt="Aditya Raj" width="90">
         </figure>
         
 
